# delta-scoreboard

./: .gitignore  README.md  app.py  config.py  databricks_utils.py  demo_mode.py  main.py  main_demo.py  pyproject.toml  requirements.txt
infrastructure/: __init__.py  resource_manager.py
